修复一些sonar bug