@@ -8,8 +8,8 @@ import javax.crypto.SecretKey;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESKeySpec;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import com.sun.org.apache.xml.internal.security.utils.Base64;
+import com.zhongkexinli.micro.serv.common.exception.EcnodeDecodeException;
 
 /***
  * 
@@ -18,6 +18,10 @@ import sun.misc.BASE64Encoder;
  */
 public class DesUtil {
 
+  private DesUtil() {
+    
+  }
+  
   public static  final  String DES = "DES";
   public static final String DES_KEY = "wang!@#$%";
 
@@ -28,7 +32,7 @@ public class DesUtil {
    * @return 根据键值进行加密
    * @throws Exception 异常
    */
-  public static String encrypt(String data) throws Exception {
+  public static String encrypt(String data) throws EcnodeDecodeException {
     return encrypt(data, DES_KEY);
   }
 
@@ -39,9 +43,9 @@ public class DesUtil {
    * @param key  加密键byte数组
    * @throws Exception 异常
    */
-  public static String encrypt(String data, String key) throws Exception {
+  public static String encrypt(String data, String key) throws EcnodeDecodeException {
     byte[] bt = encrypt(data.getBytes(), key.getBytes());
-    String strs = new BASE64Encoder().encode(bt);
+    String strs =  Base64.encode(bt);
     return strs;
   }
   
@@ -54,24 +58,28 @@ public class DesUtil {
    * @return 据键值进行加密
    * @throws Exception 异常
    */
-  public static byte[] encrypt(byte[] data, byte[] key) throws Exception {
-    // 生成一个可信任的随机数源
-    SecureRandom sr = new SecureRandom();
-
-    // 从原始密钥数据创建DESKeySpec对象
-    DESKeySpec dks = new DESKeySpec(key);
-
-    // 创建一个密钥工厂，然后用它把DESKeySpec转换成SecretKey对象
-    SecretKeyFactory keyFactory = SecretKeyFactory.getInstance(DES);
-    SecretKey securekey = keyFactory.generateSecret(dks);
-
-    // Cipher对象实际完成加密操作
-    Cipher cipher = Cipher.getInstance(DES);
-
-    // 用密钥初始化Cipher对象
-    cipher.init(Cipher.ENCRYPT_MODE, securekey, sr);
-
-    return cipher.doFinal(data);
+  public static byte[] encrypt(byte[] data, byte[] key) throws EcnodeDecodeException {
+    try {
+      // 生成一个可信任的随机数源
+      SecureRandom sr = new SecureRandom();
+  
+      // 从原始密钥数据创建DESKeySpec对象
+      DESKeySpec dks = new DESKeySpec(key);
+  
+      // 创建一个密钥工厂，然后用它把DESKeySpec转换成SecretKey对象
+      SecretKeyFactory keyFactory = SecretKeyFactory.getInstance(DES);
+      SecretKey securekey = keyFactory.generateSecret(dks);
+  
+      // Cipher对象实际完成加密操作
+      Cipher cipher = Cipher.getInstance(DES);
+  
+      // 用密钥初始化Cipher对象
+      cipher.init(Cipher.ENCRYPT_MODE, securekey, sr);
+  
+      return cipher.doFinal(data);
+    } catch (Exception e) {
+      throw new EcnodeDecodeException(e);
+    }
   }
 
   /**
@@ -82,7 +90,7 @@ public class DesUtil {
    * @throws IOException 异常
    * @throws Exception 异常
    */
-  public static String decrypt(String data) throws  Exception {
+  public static String decrypt(String data) throws  EcnodeDecodeException {
     return decrypt(data, DES_KEY);
   }
    
@@ -96,14 +104,17 @@ public class DesUtil {
    * @throws IOException 异常
    * @throws Exception 异常
    */
-  public static String decrypt(String data, String key) throws Exception {
+  public static String decrypt(String data, String key) throws EcnodeDecodeException {
     if (data == null) {
       return null;
     }
-    BASE64Decoder decoder = new BASE64Decoder();
-    byte[] buf = decoder.decodeBuffer(data);
-    byte[] bt = decrypt(buf, key.getBytes());
-    return new String(bt);
+    try {
+      byte[] buf = Base64.decode(data);
+      byte[] bt = decrypt(buf, key.getBytes());
+      return new String(bt);
+    } catch (Exception e) {
+      throw new EcnodeDecodeException(e);
+    }
   }
   
   /**
@@ -114,23 +125,27 @@ public class DesUtil {
    * @return 根据键值进行解密
    * @throws Exception 异常
    */
-  public static byte[] decrypt(byte []data, byte[] key) throws Exception {
-    // 生成一个可信任的随机数源
-    SecureRandom sr = new SecureRandom();
-
-    // 从原始密钥数据创建DESKeySpec对象
-    DESKeySpec dks = new DESKeySpec(key);
-
-    // 创建一个密钥工厂，然后用它把DESKeySpec转换成SecretKey对象
-    SecretKeyFactory keyFactory = SecretKeyFactory.getInstance(DES);
-    SecretKey securekey = keyFactory.generateSecret(dks);
-
-    // Cipher对象实际完成解密操作
-    Cipher cipher = Cipher.getInstance(DES);
-
-    // 用密钥初始化Cipher对象
-    cipher.init(Cipher.DECRYPT_MODE, securekey, sr);
-
-    return cipher.doFinal(data);
+  public static byte[] decrypt(byte []data, byte[] key) throws EcnodeDecodeException {
+    try {
+      // 生成一个可信任的随机数源
+      SecureRandom sr = new SecureRandom();
+  
+      // 从原始密钥数据创建DESKeySpec对象
+      DESKeySpec dks = new DESKeySpec(key);
+  
+      // 创建一个密钥工厂，然后用它把DESKeySpec转换成SecretKey对象
+      SecretKeyFactory keyFactory = SecretKeyFactory.getInstance(DES);
+      SecretKey securekey = keyFactory.generateSecret(dks);
+  
+      // Cipher对象实际完成解密操作
+      Cipher cipher = Cipher.getInstance(DES);
+  
+      // 用密钥初始化Cipher对象
+      cipher.init(Cipher.DECRYPT_MODE, securekey, sr);
+  
+      return cipher.doFinal(data);
+    } catch (Exception e) {
+      throw new EcnodeDecodeException(e);
+    }
   }
 }
